fix: show cursor in codemirror on mobile
closes #6

--- a/client/src/edit/code-editor.scss
+++ b/client/src/edit/code-editor.scss
@@ -15,6 +15,7 @@
   right: 0;
   bottom: 0;
   height: auto;
+  user-select: text;
 }
 
 /* The lint marker gutter */
